# maquette

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
examples/: README.md  documentation.typ
examples/data/: colored_cube.stl  cube.stl  rubi_blender.ply  rubi_scan.ply
harness/: Cargo.toml  README.md
harness/src/: main.rs
maquette/: maquette.wasm
src/: annotations.rs  cache.rs  clip.rs  color.rs  color_map.rs  config.rs  explode.rs  expr.rs  fxaa.rs  lib.rs  math.rs  obj_parser.rs  outline.rs  parser.rs  ply_parser.rs  png_encoder.rs  projection.rs  rasterizer.rs  render.rs  shading.rs  smooth.rs  ssao.rs  svg.rs
