[package]
name = "maquette"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol" }
miniz_oxide = "0.9.1"

[profile.release]
lto = "fat"
strip = true
opt-level = 3
codegen-units = 1
panic = 'abort'
debug = false
debug-assertions = false
overflow-checks = false
